# projektpraktikum_rel_gpu

./: .gitignore  .gitlab-ci.yml  README.md  dockerfile
graph/: .clang-format  CMakeLists.txt  Makefile  Makefile.macOSX  graph.cpp
graph/source/: graph.cpp  graph.h  main.cpp  position.h  progress_status.h  util.h
graph/source/apsp/: apsp.cpp  apsp.h  johnson.cpp  johnson.cu  johnson.h  johnson.hpp  util.h  util.hpp
graph/test/: CMakeLists.txt  GraphTest.hpp  cases.cpp  test.cpp
relearn/: .clang-format  .clang-tidy  CMakeLists.txt  apply_format.sh  apply_tidy.sh  check_tidy.sh  clang-tidy-output.txt  new.cpp  rank_0_in_network.txt  rank_0_out_network.txt  readme.md  readme.txt
relearn/adapter/: CMakeLists.txt
relearn/benchmark/: AdapterNeuronModel.h  CMakeLists.txt  benchmark_background.cpp  benchmark_barnes_hut.cpp  benchmark_calcium.cpp  benchmark_input_calculator.cpp  benchmark_kernel.cpp  benchmark_network_graph.cpp  benchmark_neuron_model.cpp  benchmark_octree_gpu.cpp  main.cpp  main.h
relearn/benchmark/factory/: background_factory.h  extra_info_factory.h  input_factory.h  neuron_model_factory.h
relearn/benchmark_cuda/: CMakeLists.txt  benchmark_barnes_hut.cpp  benchmark_octree_gpu.cpp  main.cpp  main.h
relearn/cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Instrumentation.cmake  Linker.cmake  ProjectLibraries.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  VisualStudio.cmake
relearn/cuda/: CMakeLists.txt  Commons.cuh  CudaArray.cuh  CudaVector.cuh  NeuronsExtraInfos.cuh  Random.cuh  RelearnGPUException.h
relearn/cuda/background/: BackgroundActivity.cuh
relearn/cuda/models/: AEIFModel.cuh  FitzHughNagumoModel.cuh  IzhikevichModel.cuh  NeuronModel.cuh  PoissonModel.cuh
relearn/harness/: CMakeLists.txt  harness.cpp
relearn/harness/factory/: background_factory.h  extra_info_factory.h  input_factory.h  network_graph_factory.h  neuron_model_factory.h
relearn/input/: calcium.txt  interrupts.txt  interrupts1000000_create.txt  interrupts1000000_delete.txt  network_5.txt  positions.txt  positions_id.txt  rand100.txt  rand_100_edges.txt  rand_100_nodes.txt  rand_10_edges.txt  rand_10_nodes.txt  roi_positions.txt  roi_synapses.txt  roi_translation_dict.txt
relearn/input/100/: network.txt  positions.txt
relearn/input/8/: network.txt  positions.txt
relearn/input/old/: positions.txt
relearn/input/tests/: create-100-enable.txt  disable-100-interrupt.txt  enable-100-interrupt.txt
relearn/output/: network_rank_0  neurons_overview  positions_rank_0  sums
relearn/output-clang-tidy/: main.cpp
relearn/shared/calculations/: NeuronModelCalculations.h
relearn/shared/enums/: FiredStatus.h  SignalType.h  UpdateStatus.h
relearn/shared/gpu/: CudaHelper.h  GpuTypes.h  Interface.h  Macros.h
relearn/source/: CMakeLists.txt  Cell.cpp  Cell.h  Commons.h  Config.h  Deriatives.h  DeriativesAndFunctions.h  ElementType.h  LogFiles.cpp  LogFiles.h  LogMessages.cpp  LogMessages.h  MPIInfos.cpp  MPIInfos.h  MPINoWrapper.cpp  MPINoWrapper.h  MPINo_RMA_MemAllocator.cpp  MPINo_RMA_MemAllocator.h  MPITypes.h  MPIUserDefinedOperation.h  MPIWrapper.cpp  MPIWrapper.h  MPI_RMA_MemAllocator.cpp  MPI_RMA_MemAllocator.h  ModelParameter.h  Multiindex.h  NetworkGraph.cpp  NetworkGraph.h  NeuronIdMap.cpp  NeuronIdMap.h  NeuronModels.cpp  NeuronModels.h  NeuronModelsAEIFModel.cpp  NeuronModelsFitzHughNagumoModel.cpp  NeuronModelsIzhikevichModel.cpp  NeuronModelsModelA.cpp  NeuronMonitor.cpp  NeuronMonitor.h  NeuronToSubdomainAssignment.cpp  NeuronToSubdomainAssignment.h  (+43 more)
relearn/source/algorithm/: Algorithm.cpp  Algorithm.h  AlgorithmEnum.h  Algorithms.h  BarnesHut.cpp  BarnesHut.h  BarnesHutCell.h  BarnesHutInverted.cpp  BarnesHutInverted.h  BarnesHutInvertedCell.h  Cells.h  Connector.h  ExchangingAlgorithm.h  FastMultipoleMethods.cpp  FastMultipoleMethods.h  FastMultipoleMethodsCell.h  Naive.cpp  Naive.h  NaiveCell.h  Types.h  VirtualPlasticityElement.h
relearn/source/calculations/: NeuronModelCalculations.h
relearn/source/cuda/: CudaHelper.h  CudaIzhikevichModel.cu  CudaVector.cuh  NeuronsExtraInfos.cuh  Random.cuh  cuda_neuron_model.cuh
relearn/source/gpu/: CMakeLists.txt  Commons.cu  Commons.cuh  CudaHelper.h  CudaVector.cuh  GpuTypes.h  Interface.cpp  Interface.h  Macros.h  NeuronsExtraInfos.cuh  Random.cuh  RelearnGPUException.cu  RelearnGPUException.h
relearn/source/io/: CalciumIO.cpp  CalciumIO.h  Event.cpp  Event.h  EventTrace.cpp  EventTrace.h  FileValidator.h  InteractiveNeuronIO.cpp  InteractiveNeuronIO.h  LogFiles.cpp  LogFiles.h  NeuronIO.cpp  NeuronIO.h
relearn/source/mpi/: CommunicationMap.h  MPINoWrapper.cpp  MPINoWrapper.h  MPINo_RMA_MemAllocator.cpp  MPINo_RMA_MemAllocator.h  MPITypes.h  MPIWrapper.cpp  MPIWrapper.h  MPI_RMA_MemAllocator.cpp  MPI_RMA_MemAllocator.h
relearn/source/neurons/: CalciumCalculator.cpp  CalciumCalculator.h  ElementType.h  FiredStatus.h  LocalAreaTranslator.h  NetworkGraph.cpp  NetworkGraph.h  Neurons.cpp  Neurons.h  NeuronsExtraInfo.cpp  NeuronsExtraInfo.h  SignalType.h  SynapsesDeletionFinder.h  TargetCalciumDecay.h  UpdateStatus.h
relearn/source/shared/: Config.h
relearn/test/: CMakeLists.txt  RandomAdapter.h  RelearnTest.cpp  RelearnTest.hpp  commons.cpp  commons.h  test_background_activity.cpp  test_barnes_hut.cpp  test_calcium_calculator.cpp  test_cell.cpp  test_connector.cpp  test_fast_gauss.cpp  test_kernel.cpp  test_kernel_gamma.cpp  test_kernel_gaussian.cpp  test_kernel_linear.cpp  test_kernel_weibull.cpp  test_local_area_translator.cpp  test_misc.cpp  test_monitor_parser.cpp  test_mpi_rank.cpp  test_network_graph.cpp  test_neuron_assignment.cpp  test_neuron_extra_info.cpp  test_neuron_id_translator.cpp  test_neuron_io.cpp  test_neuron_models.cpp  test_neurons.cpp  test_octree.cpp  test_partition.cpp  test_rank_neuron_id.cpp  test_space_filling_curve.cpp  test_step_parser.cpp  test_synaptic_elements.cpp  test_synaptic_input.cpp  test_tagged_id.cpp  test_vector.cpp
relearn/test_cuda/: CMakeLists.txt  RelearnTest.cpp  RelearnTest.hpp
(+469 files in other folders)
